Archive2/dd/8fb69409472318/output
main.cpp:25:9: error: use of undeclared identifier 'Function'; did you mean 'Funktion'?
        Function(*e);
        ^~~~~~~~
        Funktion
main.cpp:8:6: note: 'Funktion' declared here
void Funktion(base& variable)
     ^
1 error generated.
